Added tomcat log output